--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>AngularPwa</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/pwa-angular/favicon.ico">
     <link rel="manifest" href="/pwa-angular/manifest.webmanifest">
     <meta name="theme-color" content="#1976d2">
     <link rel="stylesheet" href="/pwa-angular/styles.ef46db3751d8e999.css">
