--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>AngularPwa</title>
-    <base href="/">
+    <base href="/pwa-angular/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="/pwa-angular/favicon.ico">
     <link rel="manifest" href="/pwa-angular/manifest.webmanifest">
