--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!DOCTYPE html><html lang="en"><head>
-  <meta charset="utf-8">
-  <title>AngularPwa</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>AngularPwa</title>
+    <base href="/pwa-angular/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="/pwa-angular/favicon.ico">
+    <link rel="manifest" href="/pwa-angular/manifest.webmanifest">
+    <meta name="theme-color" content="#1976d2">
+    <link rel="stylesheet" href="/pwa-angular/styles.ef46db3751d8e999.css">
+</head>
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.2ccfaffa60907d9e.js" type="module"></script><script src="polyfills.10998e05b3da6d14.js" type="module"></script><script src="main.e3cda243b6fc5b11.js" type="module"></script>
+<app-root></app-root>
+<noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="/pwa-angular/runtime.2ccfaffa60907d9e.js" type="module"></script>
+<script src="/pwa-angular/polyfills.10998e05b3da6d14.js" type="module"></script>
+<script src="/pwa-angular/main.e3cda243b6fc5b11.js" type="module"></script>
 
-</body></html>
+</body>
+</html>
